--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,7 @@ version: '3.9'
 
 services:
   minitwit:
-    build:
-      context: "."
-      dockerfile: "./Dockerfile"
+    image: ${DOCKER_USERNAME}/minitwitimage
+    container_name: minitwit
     ports:
       - "8080:8080"
