--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - database-network
     ports:
       - "8080:8080"
+    depends_on:
+      - postgres
   postgres:
     container_name: postgres
     image: postgres:latest
