--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,10 @@ version: "3.9"
 
 services:
   minitwit:
-    image: ${DOCKER_USERNAME}/minitwitimage
+    #image: ${DOCKER_USERNAME}/minitwitimage
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: minitwit
     networks:
       - database-network
