Use hosted image for minitwit service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,11 @@ version: "3.9"
 
 services:
   minitwit:
-    #image: ${DOCKER_USERNAME}/minitwitimage
+    image: ${DOCKER_USERNAME}/minitwitimage
     environment:
       GO_ENV: production
       POSTGRES_USERNAME: ${POSTGRES_USERNAME}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    build:
-      context: .
-      dockerfile: Dockerfile
     container_name: minitwit
     networks:
       - database-network
