--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,7 @@ version: "3.9"
 
 services:
   minitwit:
-    build:
-      context: .
-      dockerfile: ./Dockerfile
-    #image: ${DOCKER_USERNAME}/minitwitimage
+    image: ${DOCKER_USERNAME}/minitwitimage
     environment:
       GO_ENV: production
       POSTGRES_USERNAME: ${POSTGRES_USERNAME}
