--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,24 @@ services:
     volumes:
       - postgres-db:/data/postgres
 
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+
+  grafana:
+    image: grafana/grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=secret
+    depends_on:
+      - prometheus
+
 volumes:
   postgres-db:
     driver: local
