--- a/prometheus.yml
+++ b/prometheus.yml
@@ -15,3 +15,7 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
       - targets: ["localhost:9090"]
+  - job_name: "minitwit"
+    scrape_interval: 30s
+    static_configs:
+      - targets: ["minitwit:2112"]
