--- a/prometheus.yml
+++ b/prometheus.yml
@@ -19,3 +19,6 @@ scrape_configs:
     scrape_interval: 30s
     static_configs:
       - targets: ["minitwit:2112"]
+  - job_name: "node"
+    static_configs:
+      - targets: ["node_exporter:9100"]
