--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
     volumes:
       - prometheus-data:/prometheus
       - type: bind
-        source: ./prometheus.yml
+        source: ./monitoring/prometheus.yml
         target: /prometheus/prometheus.yml
         read_only: true
     restart: unless-stopped
@@ -61,8 +61,8 @@ services:
       GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_PASSWORD}
     volumes:
       - grafana-data:/var/lib/grafana
-      - ./grafana/provisioning/:/etc/grafana/provisioning/
-      - ./grafana/dashboards:/var/lib/grafana/dashboards
+      - ./monitoring/grafana/provisioning/:/etc/grafana/provisioning/
+      - ./monitoring/grafana/dashboards:/var/lib/grafana/dashboards
     restart: unless-stopped
   node_exporter:
     image: prom/node-exporter:latest
