Working efk configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,6 +80,48 @@ services:
     networks:
       - monitoring
 
+  elasticsearch:
+    image: "docker.elastic.co/elasticsearch/elasticsearch:7.2.0"
+    environment:
+      - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
+      - "discovery.type=single-node"
+      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
+      - xpack.security.enabled=true
+    volumes:
+      - elk_elasticsearch_data:/usr/share/elasticsearch/data
+    networks:
+      - elk
+
+  kibana:
+    image: "docker.elastic.co/kibana/kibana:7.2.0"
+    depends_on:
+      - elasticsearch
+    environment:
+      - ELASTICSEARCH_HOSTS=["http://elasticsearch:9200"]
+      - ELASTICSEARCH_USERNAME=elastic
+      - ELASTICSEARCH_PASSWORD=${ELASTIC_PASSWORD}
+    networks:
+      - elk
+    ports:
+      - "5601:5601"
+
+  filebeat:
+    image: "docker.elastic.co/beats/filebeat:7.2.0"
+    user: root
+    command:
+      - "-e"
+      - "--strict.perms=false"
+    volumes:
+      - ./logging/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
+      - /var/lib/docker:/var/lib/docker:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - elk
+    environment:
+      - DOCKER_USERNAME=${DOCKER_USERNAME}
+      - ELASTIC_USERNAME=${ELASTIC_USERNAME}
+      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
+
 volumes:
   postgres-db:
     driver: local
@@ -87,11 +129,15 @@ volumes:
     driver: local
   grafana-data:
     driver: local
+  elk_elasticsearch_data:
+    driver: local
 
 networks:
   database-network:
     name: database-network
   prometheus-network:
     name: prometheus-network
+  elk:
+    name: elk
   monitoring:
     driver: bridge
