--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -79,6 +79,8 @@ jobs:
           cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/minitwitimage:webbuildcache,mode=max
       - name: Copy docker-compose.yml to server
         run: scp docker-compose.yml minitwit:/vagrant/docker-compose.yml
+      - name: Copy logging files
+        run: scp -r logging/ minitwit:/vagrant/logging
       - name: Copy monitoring files
         run: scp -r monitoring/ minitwit:/vagrant/monitoring
       - name: Copy deploy.sh to server
