Remove OSVersion of firefox

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,6 +37,7 @@ jobs:
       # Run end-to-end tests through Selenium
       - name: Selenium tests
         run: |
+          sudo snap remove --purge firefox
           sudo apt install firefox
           wget https://github.com/mozilla/geckodriver/releases/download/v0.32.0/geckodriver-v0.32.0-linux64.tar.gz
           tar xzvf geckodriver-v0.32.0-linux64.tar.gz
