--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,8 @@ jobs:
       - name: Selenium tests
         run: |
           sudo snap remove --purge firefox
-          sudo apt install firefox
+          sudo add-apt-repository ppa:mozillateam/ppa
+          sudo apt install firefox-esr
           wget https://github.com/mozilla/geckodriver/releases/download/v0.32.0/geckodriver-v0.32.0-linux64.tar.gz
           tar xzvf geckodriver-v0.32.0-linux64.tar.gz
           mv geckodriver ./test
